--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "4              4.1  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "array(['$29.99', '$19.99', '$12.99', '$99.99', '$79.99'], dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "0              4.0  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "max            5.000000     5.000000         5.000000  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "val_star_rating           0.484341     0.731538         1.000000  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
        "148"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,29 +927,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['num_reviews', 'play_star_rating', 'star_rating', 'val_star_rating']"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['piece_count', 'num_reviews', 'play_star_rating', 'star_rating', 'val_star_rating', 'piece_count']\n"
+     ]
     }
    ],
    "source": [
     "columns = [column for column in df.columns if df[column].dtype == np.float64]\n",
     "columns.remove('list_price')\n",
-    "columns"
+    "columns.append('piece_count')\n",
+    "print(columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1002,7 @@
        "      <th>0</th>\n",
        "      <td>75823</td>\n",
        "      <td>6-12</td>\n",
-       "      <td>277</td>\n",
+       "      <td>-0.273020</td>\n",
        "      <td>Bird Island Egg Heist</td>\n",
        "      <td>Catapult into action and take back the eggs fr...</td>\n",
        "      <td>Use the staircase catapult to launch Red into ...</td>\n",
@@ -1021,7 +1019,7 @@
        "      <th>1</th>\n",
        "      <td>75822</td>\n",
        "      <td>6-12</td>\n",
-       "      <td>168</td>\n",
+       "      <td>-0.404154</td>\n",
        "      <td>Piggy Plane Attack</td>\n",
        "      <td>Launch a flying attack and rescue the eggs fro...</td>\n",
        "      <td>Pilot Pig has taken off from Bird Island with ...</td>\n",
@@ -1038,7 +1036,7 @@
        "      <th>2</th>\n",
        "      <td>75821</td>\n",
        "      <td>6-12</td>\n",
-       "      <td>74</td>\n",
+       "      <td>-0.517242</td>\n",
        "      <td>Piggy Car Escape</td>\n",
        "      <td>Chase the piggy with lightning-fast Chuck and ...</td>\n",
        "      <td>Pitch speedy bird Chuck against the Piggy Car....</td>\n",
@@ -1055,7 +1053,7 @@
        "      <th>3</th>\n",
        "      <td>21030</td>\n",
        "      <td>12+</td>\n",
-       "      <td>1032</td>\n",
+       "      <td>0.635296</td>\n",
        "      <td>United States Capitol Building</td>\n",
        "      <td>Explore the architecture of the United States ...</td>\n",
        "      <td>Discover the architectural secrets of the icon...</td>\n",
@@ -1072,7 +1070,7 @@
        "      <th>4</th>\n",
        "      <td>21035</td>\n",
        "      <td>12+</td>\n",
-       "      <td>744</td>\n",
+       "      <td>0.288812</td>\n",
        "      <td>Solomon R. Guggenheim Museum®</td>\n",
        "      <td>Recreate the Solomon R. Guggenheim Museum® wit...</td>\n",
        "      <td>Discover the architectural secrets of Frank Ll...</td>\n",
@@ -1091,11 +1089,11 @@
       ],
       "text/plain": [
        "   prod_id  ages  piece_count                        set_name  \\\n",
-       "0    75823  6-12          277           Bird Island Egg Heist   \n",
-       "1    75822  6-12          168              Piggy Plane Attack   \n",
-       "2    75821  6-12           74                Piggy Car Escape   \n",
-       "3    21030   12+         1032  United States Capitol Building   \n",
-       "4    21035   12+          744   Solomon R. Guggenheim Museum®   \n",
+       "0    75823  6-12    -0.273020           Bird Island Egg Heist   \n",
+       "1    75822  6-12    -0.404154              Piggy Plane Attack   \n",
+       "2    75821  6-12    -0.517242                Piggy Car Escape   \n",
+       "3    21030   12+     0.635296  United States Capitol Building   \n",
+       "4    21035   12+     0.288812   Solomon R. Guggenheim Museum®   \n",
        "\n",
        "                                           prod_desc  \\\n",
        "0  Catapult into action and take back the eggs fr...   \n",
@@ -1126,7 +1124,7 @@
        "4        -0.204063  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1210,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>277</td>\n",
+       "      <td>-0.273020</td>\n",
        "      <td>29.99</td>\n",
        "      <td>-0.398512</td>\n",
        "      <td>-0.655279</td>\n",
@@ -1236,7 +1234,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>168</td>\n",
+       "      <td>-0.404154</td>\n",
        "      <td>19.99</td>\n",
        "      <td>-0.398512</td>\n",
        "      <td>-0.655279</td>\n",
@@ -1260,7 +1258,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>74</td>\n",
+       "      <td>-0.517242</td>\n",
        "      <td>12.99</td>\n",
        "      <td>-0.147162</td>\n",
        "      <td>-0.132473</td>\n",
@@ -1284,7 +1282,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1032</td>\n",
+       "      <td>0.635296</td>\n",
        "      <td>99.99</td>\n",
        "      <td>0.187972</td>\n",
        "      <td>-1.352353</td>\n",
@@ -1308,7 +1306,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>744</td>\n",
+       "      <td>0.288812</td>\n",
        "      <td>79.99</td>\n",
        "      <td>-0.063378</td>\n",
        "      <td>-2.049427</td>\n",
@@ -1337,11 +1335,11 @@
       ],
       "text/plain": [
        "   piece_count  list_price  num_reviews  play_star_rating  star_rating  \\\n",
-       "0          277       29.99    -0.398512         -0.655279    -0.045687   \n",
-       "1          168       19.99    -0.398512         -0.655279     0.990651   \n",
-       "2           74       12.99    -0.147162         -0.132473    -0.460222   \n",
-       "3         1032       99.99     0.187972         -1.352353     0.161581   \n",
-       "4          744       79.99    -0.063378         -2.049427     0.161581   \n",
+       "0    -0.273020       29.99    -0.398512         -0.655279    -0.045687   \n",
+       "1    -0.404154       19.99    -0.398512         -0.655279     0.990651   \n",
+       "2    -0.517242       12.99    -0.147162         -0.132473    -0.460222   \n",
+       "3     0.635296       99.99     0.187972         -1.352353     0.161581   \n",
+       "4     0.288812       79.99    -0.063378         -2.049427     0.161581   \n",
        "\n",
        "   val_star_rating  ages_10+  ages_10-14  ages_10-16  ages_10-21  \\\n",
        "0        -0.365010         0           0           0           0   \n",
@@ -1381,7 +1379,7 @@
        "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
